getway  demo，schedule自定义实现

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,3 +22,7 @@ eureka:
   client:
     service-url:
       defaultZone: http://gschaos.club:8761/eureka/
+time:
+  cron:
+    start: "6"
+    stop: "14"
